# osat

./: README.md
cad/: WS2812_single_led_mount.scad  osat_base.scad  osat_base_mount_helper.scad  osat_cad_param.scad  osat_piezo_fix.scad  osat_piezo_solder_fix.scad
cad/stl/: WS2812_single_led_mount.stl  osat_base_mount_helper.stl  osat_base_v0.stl  osat_base_v1.stl  osat_base_v1_thinner.stl  osat_piezo_fix.stl  osat_piezo_solder_fix.stl
firmware/full/: wemos_osat_full.ino
firmware/offline_flash/: wemos_osat_offline_flash.ino
osat_hardware/dcdc_board/osat_dcdc_board/: osat_dcdc_board-B_Cu.gbr  osat_dcdc_board-cache.lib  osat_dcdc_board.kicad_pcb  osat_dcdc_board.kicad_pcb-bak  osat_dcdc_board.net  osat_dcdc_board.pro  osat_dcdc_board.sch  osat_dcdc_board.sch-bak
osat_hardware/dcdc_board/osat_dcdc_board/gerber/: osat_dcdc_board-B_Cu.gbr  osat_dcdc_board-B_Mask.gbr  osat_dcdc_board-B_SilkS.gbr  osat_dcdc_board-Edge_Cuts.gbr  osat_dcdc_board-F_Cu.gbr  osat_dcdc_board-F_Mask.gbr  osat_dcdc_board-F_SilkS.gbr  osat_dcdc_board-NPTH.drl  osat_dcdc_board-PTH.drl
osat_hardware/wemos_board/osat_wemos_board/: fp-info-cache  osat_wemos_board-cache.lib  osat_wemos_board.kicad_pcb  osat_wemos_board.kicad_pcb-bak  osat_wemos_board.net  osat_wemos_board.pro  osat_wemos_board.sch
osat_hardware/wemos_board/osat_wemos_board/gerber/: osat_wemos_board-B_Cu.gbr  osat_wemos_board-B_Mask.gbr  osat_wemos_board-F_Cu.gbr  (+6 more)
osat_server/: CMakeLists.txt
osat_server/modes/: random_fill.json  random_n.json  reverse_fill.json  test.json
osat_server/src/: ClientList.h  Mode.h  ModeHandler.h  Mode_RandomFill.h  Mode_RandomN.h  Mode_ReverseFill.h  OsatConfig.h  OsatManager.cpp  OsatManager.h  Time.h  Timer.h  Utility.h  osat_types.h
osat_server/src/boost/: Tcp.h
osat_server/src/ip/: Tcp.h  Udp.h
osat_server/src/tools/: osat_server_terminal.cpp  osat_set_id_tool.cpp
osat_server/test/: test_tcp_cl.cpp  test_tcp_srv.cpp  test_udp_rcv.cpp  test_udp_send.cpp
osat_server/test/test_api/: test_tcp_cl_basic.cpp  test_tcp_srv_basic.cpp
